<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_createEvent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:weightSum="1"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <!--         android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" -->


        <TextView
            android:text="@string/searchEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/searchEventByPlace"
            android:layout_weight="0.24"
            android:textColor="@color/btn_search"
            android:textSize="30sp"
            android:fontFamily="casual"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true" />



        <EditText
            android:id="@+id/placeEventSearch"
            android:layout_below="@+id/space"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/hint_place"
            android:inputType="text"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/grey_hint"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignBottom="@+id/locationButtonSearch"
            android:layout_alignRight="@+id/searchEventByPlace"
            android:layout_alignEnd="@+id/searchEventByPlace" />

        <Space
            android:layout_width="270dp"
            android:layout_height="5dp"
            android:layout_below="@+id/searchEventByPlace"
            android:id="@+id/space"
            />

        <ImageButton
            android:id="@+id/locationButtonSearch"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/searchEventByPlace"
            android:adjustViewBounds="false"
            android:background="@color/bg_createEvent"
            android:elevation="0dp"
            android:src="@mipmap/ic_geo" />
        <!-- android:adjustViewBounds="false" -->

        <EditText
            android:id="@+id/dateEventSearch"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.55"
            android:background="@color/white"
            android:hint="@string/hint_date"
            android:inputType="text"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/grey_hint"
            android:layout_marginTop="24dp"
            android:layout_below="@+id/placeEventSearch" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_below="@+id/dateEventSearch"
            android:id="@+id/space1"/>

        <TextView
            android:id="@+id/tagTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/tag"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:layout_below="@+id/space1"
  />

        <Spinner
            android:id="@+id/tagSpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0.13"
            android:entries="@array/tag"
            android:prompt="@string/tag_prompt"
            android:layout_below="@+id/tagTextView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <!-- Create Button -->

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_below="@+id/tagSpinner"
            android:id="@+id/space2"/>

        <Button
            android:id="@+id/btnSearchByPlace"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/btn_searchByLocation"
            android:fontFamily="casual"
            android:text="@string/btn_searchEvent"
            android:textColor="@color/btn_search"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            android:layout_marginBottom="38dp"
            android:layout_below="@+id/space2"
   />

        <!-- Link to Main Screen -->

        <Button
            android:id="@+id/btnLinkToMainScreenAfterSearch"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/btn_link_to_mainAfterSearch"
            android:textAllCaps="false"
            android:textColor="@color/grey"
            android:textSize="15dp"
            android:layout_below="@+id/btnSearchByPlace"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>


</RelativeLayout>